unpackaged/main/default/objects/Contact/fields/Asset_Management__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management__c</fullName>
    <label>Asset Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>