unpackaged/main/default/objects/Contact/fields/AUA__c.field-meta.xml
<CustomField>
    <fullName>AUA__c</fullName>
    <label>AUA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>