unpackaged/main/default/objects/Contact/fields/Book_of_Business_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Book_of_Business_Ownership__c</fullName>
    <label>Book of Business Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diversify</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>