unpackaged/main/default/objects/Contact/fields/Count_of_Households__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Households__c</fullName>
    <label>Count of Households</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>