unpackaged/main/default/objects/Contact/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <label>CRD Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>