unpackaged/main/default/objects/Contact/fields/Current_Firm__c.field-meta.xml
<CustomField>
    <fullName>Current_Firm__c</fullName>
    <label>Current Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>