unpackaged/main/default/objects/Contact/fields/DMS_Usage__c.field-meta.xml
<CustomField>
    <fullName>DMS_Usage__c</fullName>
    <label>DMS Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduced</fullName>
            </value>
            <value>
                <fullName>Light User</fullName>
            </value>
            <value>
                <fullName>Active User</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>