unpackaged/main/default/objects/Contact/fields/Egnyte_User__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_User__c</fullName>
    <label>Egnyte User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Basic</fullName>
            </value>
            <value>
                <fullName>Yes - Enhanced</fullName>
            </value>
            <value>
                <fullName>Yes - Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>