unpackaged/main/default/objects/Contact/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <label>General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>