unpackaged/main/default/objects/Contact/fields/Important_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Information__c</fullName>
    <label>Important Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>