unpackaged/main/default/objects/Contact/fields/Integrated_Ops__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Ops__c</fullName>
    <label>Integrated Ops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduced</fullName>
            </value>
            <value>
                <fullName>Light User</fullName>
            </value>
            <value>
                <fullName>Active User</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>