unpackaged/main/default/objects/Contact/fields/isPortalUserEnabled__c.field-meta.xml
<CustomField>
    <fullName>isPortalUserEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the Enable/Disable Portal User flow. Indicates this person has been provisioned as a community user. Machine-managed - do not edit by hand.</description>
    <inlineHelpText>Managed automatically by the Enable/Disable Portal User flow.</inlineHelpText>
    <label>Is Portal User Enabled</label>
    <type>Checkbox</type>
</CustomField>