unpackaged/main/default/objects/Contact/fields/Joined_the_Firm_Date__c.field-meta.xml
<CustomField>
    <fullName>Joined_the_Firm_Date__c</fullName>
    <label>Joined the Firm Date</label>
    <type>Date</type>
</CustomField>