unpackaged/main/default/objects/Contact/fields/Lastpass_User__c.field-meta.xml
<CustomField>
    <fullName>Lastpass_User__c</fullName>
    <label>Lastpass User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Diversify</fullName>
            </value>
            <value>
                <fullName>Yes - Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>