unpackaged/main/default/objects/Contact/fields/Length_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Service__c</fullName>
    <label>Length of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>