unpackaged/main/default/objects/Contact/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <label>Payout</label>
    <type>TextArea</type>
</CustomField>