unpackaged/main/default/objects/Contact/fields/Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The community User record provisioned for this person by the Enable/Disable Portal User flow.</description>
    <inlineHelpText>Managed automatically by the Enable/Disable Portal User flow.</inlineHelpText>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Portal Contacts</relationshipLabel>
    <relationshipName>PortalContacts</relationshipName>
    <type>Lookup</type>
</CustomField>