unpackaged/main/default/objects/Contact/fields/Redtail_Id__c.field-meta.xml
<CustomField>
    <fullName>Redtail_Id__c</fullName>
    <label>Redtail Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>