unpackaged/main/default/objects/Contact/fields/Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Rep_Id__c</fullName>
    <label>Rep Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>