unpackaged/main/default/objects/Contact/fields/Rep_Id_Shortened__c.field-meta.xml
<CustomField>
    <fullName>Rep_Id_Shortened__c</fullName>
    <formula>VALUE(RIGHT(TEXT(Rep_Id__c), 3))</formula>
    <label>Rep Id Shortened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>