unpackaged/main/default/objects/Contact/fields/RIA_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>RIA_Affiliation__c</fullName>
    <formula>IF(CONTAINS(FinServ__SourceSystemId__c, &#39;-1330-&#39;), &quot;DAS&quot;, IF(CONTAINS(FinServ__SourceSystemId__c, &#39;-4268-&#39;),&quot;DWM&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RIA Affiliation</label>
    <type>Text</type>
</CustomField>