unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producing</fullName>
            </value>
            <value>
                <fullName>Non-Producing</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
                <isActive>false</isActive>
                <label>Advisor</label>
            </value>
            <value>
                <fullName>Non-Registered Support Staff</fullName>
                <isActive>false</isActive>
                <label>Non-Registered Support Staff</label>
            </value>
            <value>
                <fullName>Registered Support Staff</fullName>
                <isActive>false</isActive>
                <label>Registered Support Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>