unpackaged/main/default/objects/Contact/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>