unpackaged/main/default/objects/Contact/fields/TTM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>TTM_Revenue__c</fullName>
    <description>Trailing 12 months of revenue</description>
    <inlineHelpText>Trailing 12 months of revenue</inlineHelpText>
    <label>TTM Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>