unpackaged/main/default/objects/Contact/fields/Work_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Work_Anniversary__c</fullName>
    <label>Work Anniversary</label>
    <type>Date</type>
</CustomField>