unpackaged/main/default/objects/Contact/recordTypes/Advisor_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Advisor_Prospect</fullName>
    <active>true</active>
    <label>Advisor Prospect</label>
</RecordType>