unpackaged/main/default/objects/Contact/listViews/All_Diversify_Related_Persons.listView-meta.xml
<ListView>
    <fullName>All_Diversify_Related_Persons</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Diversify_Related_Person</value>
    </filters>
    <label>All Diversify Related Persons</label>
</ListView>