unpackaged/main/default/objects/Contact/listViews/All_Reps.listView-meta.xml
<ListView>
    <fullName>All_Reps</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Rep_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rep_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Reps</label>
</ListView>